[package]
name = "ytorrent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
serde_with = { version = "3.8.1" }
reqwest = { version = "0.12.4" }
sha1_smol = { version = "1.0.0", features = ["std"] }
rand = "0.8.5"
url = "2.5.0"

[dev-dependencies]
serde_bencode = { version = "0.2.4" }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }

[lib]
crate-type = ["rlib"]
