[package]
name = "ytorrent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_with = { version = "3.9.0" }
reqwest = { version = "0.12.5" }
sha1_smol = { version = "1.0.1", features = ["std"] }
rand = "0.8.5"
url = "2.5.2"
log = "0.4.22"

[dev-dependencies]
serde_bencode = { version = "0.2.4" }
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }

[lib]
crate-type = ["rlib"]
